--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 32px;
+}
+
 #calc{
     display: flex;
     min-height: 95vh;
@@ -19,6 +24,7 @@
     padding: 5px;
     border: 5px black solid;
     background-color: grey;
+    border-radius: 15px;
 }
 
 .zero{
@@ -35,6 +41,9 @@
     padding: 5px;
     margin: 5px;
     background-color: lightgrey;
+
+    font-size: 48px;
+    letter-spacing: 3px;
 }
 
 .operator{
